--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
     Święty Jan Paweł II – Papież Polak
   </div>
 
-  <div class="video">
-    <!-- Wstaw tutaj link do filmu z YouTube -->
-    <iframe src="https://youtu.be/If5X97CumxM?si=oC-K8BTfupiHQ0iR" allowfullscreen></iframe>
-  </div>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/If5X97CumxM?si=oC-K8BTfupiHQ0iR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
