--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@
   </div>
 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/If5X97CumxM?si=oC-K8BTfupiHQ0iR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ <div class="image">
+    <img src="Papaj.png" alt="Jan Papaj II">
+  </div>
+
 </body>
 </html>
