--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
     <img src="Papaj.png" alt="Jan Papaj II">
   </div>
 
+  <a href="oblockpapaj.html">Jan Paweł 2 w Oblock Chicago</a>
+
 </body>
 </html>
