--- a/oblockjp2.html
+++ b/oblockjp2.html
@@ -50,7 +50,7 @@
 <body>
   <header>
     <h1>Papież Jan Paweł 2 w Oblock</h1>
-    <p class="description">Tutaj możesz dodać swój opis. Np. galeria zdjęć z podróży, projektów, lub czegokolwiek chcesz.</p>
+    <p class="description">Papież Jan Paweł 2 był na osiedlu Oblock Chicago w roku 1979 od 4 do 19 czerwca. Był tam żeby nauczać o Biblii wszystkie rodziny z tamtąd, był on też strzelcem w "Drive By Shooting" ale strzelał wodą święconą z pistoletu na wodę. Przez cały jego pobyt przemoc między gangami wynosiła 0%, i od wtedy zawsze w niedziele wszyscy idą do kościoła, który jest bezpiecznym miejscem bez przemocy. Po morderstwie Jana Pawła 2, 13 Maja 1981 roku, wszystkie gangi zebrały się, i znalazły zabójcie i torturowali go przez kolejny tydzień, aż ten zabójca umarł z pragnienia. Do teraz w Oblock 13 Maja odbywa się msza w imieniu Jana Pawła 2, żeby uczcić jego dobro, które przyniósł do ich społeczności. </p>
   </header>
 
   <section class="gallery">
