--- a/oblockjp2.html
+++ b/oblockjp2.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background-color: #f9f9f9;
+      background-color: #000000;
       color: #333;
     }
 
