--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Minecraft Server</title>
+  <title>Prażmowice</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body style="background: url('https://i.imgur.com/ZJ5lkyk.jpg') no-repeat center center fixed; background-size: cover;" class="text-white font-sans">
@@ -11,14 +11,14 @@
 
     <!-- Header -->
     <header class="bg-green-700 bg-opacity-90 p-6 shadow-md">
-      <h1 class="text-3xl font-bold text-center">🌍 Your Minecraft Server</h1>
-      <p class="text-center text-lg mt-2">Survival | Creative | Custom Mods | 1.20.1</p>
+      <h1 class="text-3xl font-bold text-center">🌍 PrażmoCraft</h1>
+      <p class="text-center text-lg mt-2">Survival | Custom Mods | 1.20.1</p>
     </header>
 
     <!-- IP Section -->
     <section class="p-8 text-center">
       <h2 class="text-2xl font-semibold mb-4">Server IP:</h2>
-      <p class="text-xl bg-gray-800 bg-opacity-90 p-4 rounded-lg inline-block font-mono select-all">play.yourserver.net</p>
+      <p class="text-xl bg-gray-800 bg-opacity-90 p-4 rounded-lg inline-block font-mono select-all">PrazmoCraft.aternos.me</p>
     </section>
 
     <!-- Features Section -->
@@ -30,12 +30,12 @@
           <p>Unique Forge-powered gameplay with handpicked mods to enhance your experience.</p>
         </div>
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
-          <h3 class="text-xl font-bold mb-2">🛡 Survival & PvE</h3>
+          <h3 class="text-xl font-bold mb-2">🛡 Survival & PvP</h3>
           <p>Explore, build, and survive in a rich world with community-friendly rules.</p>
         </div>
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
-          <h3 class="text-xl font-bold mb-2">🎮 Events & Rewards</h3>
-          <p>Weekly in-game events, treasure hunts, and giveaways for active players.</p>
+          <h3 class="text-xl font-bold mb-2">🎮 Wojtuś/h3>
+          <p>Weekly in-game event, wojtuś logs on.</p>
         </div>
       </div>
     </section>
@@ -44,7 +44,7 @@
     <section class="p-10 text-center">
       <h2 class="text-2xl font-semibold mb-4">📦 Download Our Modpack</h2>
       <p class="mb-4">Click below to download the modpack needed to join our server.</p>
-      <a href="files/modpack.zip" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
+      <a href="papajgang1.png" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
         Download Modpack
       </a>
     </section>
@@ -53,7 +53,7 @@
     <section class="p-10 text-center">
       <h2 class="text-2xl font-semibold mb-4">💬 Join the Community</h2>
       <p class="mb-4">Chat, share builds, and get updates on our Discord server.</p>
-      <a href="https://discord.gg/yourinvite" target="_blank" class="bg-green-600 hover:bg-green-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
+      <a href="https://discord.gg/xUusTA9s9N" target="_blank" class="bg-green-600 hover:bg-green-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
         Join Discord
       </a>
     </section>
