--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p>Explore, build, and survive in a rich world with community-friendly rules.</p>
         </div>
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
-          <h3 class="text-xl font-bold mb-2">🎮 Wojtuś/h3>
+          <h3 class="text-xl font-bold mb-2">🎮 Wojtuś</h3>
           <p>Weekly in-game event, wojtuś logs on.</p>
         </div>
       </div>
