--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Prażmowice</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body style="background: url('https://imgur.com/gallery/recommend-any-hiking-boots-HyFwZad') no-repeat center center fixed; background-size: cover;" class="text-white font-sans">
+<body style="background: url('https://i.imgur.com/6KqQZHq.jpeg') no-repeat center center fixed; background-size: cover;" class="text-white font-sans">
   <div class="bg-black bg-opacity-70 min-h-screen">
 
     <!-- Header -->
