--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- Header -->
     <header class="bg-green-700 bg-opacity-90 p-6 shadow-md">
       <h1 class="text-3xl font-bold text-center">🌍 PrażmoCraft</h1>
-      <p class="text-center text-lg mt-2">Survival | Custom Mods | 1.20.1</p>
+      <p class="text-center text-lg mt-2">Survival | Własne mod | 1.20.1</p>
     </header>
 
     <!-- IP Section -->
     <section class="p-8 text-center">
       <h2 class="text-2xl font-semibold mb-4">Server IP:</h2>
-      <p class="text-xl bg-gray-800 bg-opacity-90 p-4 rounded-lg inline-block font-mono select-all">PrazmoCraft.aternos.me</p>
+      <p class="text-xl bg-gray-800 bg-opacity-90 p-4 rounded-lg inline-block font-mono select-all">prazmocraft.falixsrv.me</p>
     </section>
 
     <!-- Features Section -->
@@ -26,41 +26,41 @@
       <h2 class="text-2xl font-semibold text-center mb-6">✨ Features</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-5xl mx-auto">
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
-          <h3 class="text-xl font-bold mb-2">⚒ Custom Mods</h3>
-          <p>Unique Forge-powered gameplay with handpicked mods to enhance your experience.</p>
+          <h3 class="text-xl font-bold mb-2">⚒ Własna Paczka Modów</h3>
+          <p>Unikatowa lekka paczka modów z własnym modem zrobionym przez @Maxeolg.</p>
         </div>
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
-          <h3 class="text-xl font-bold mb-2">🛡 Survival & PvP</h3>
-          <p>Explore, build, and survive in a rich world with community-friendly rules.</p>
+          <h3 class="text-xl font-bold mb-2">🛡 Survival i PVP</h3>
+          <p>Server typowo survivalowy z nutką pvp.</p>
         </div>
         <div class="bg-gray-700 bg-opacity-90 p-6 rounded-xl shadow hover:bg-gray-600 transition">
           <h3 class="text-xl font-bold mb-2">🎮 Wojtuś</h3>
-          <p>Weekly in-game event, wojtuś logs on.</p>
+          <p>Raz na jakiś czas Wojtuś wbije na server.</p>
         </div>
       </div>
     </section>
 
     <!-- Download Section -->
     <section class="p-10 text-center">
-      <h2 class="text-2xl font-semibold mb-4">📦 Download Our Modpack</h2>
-      <p class="mb-4">Click below to download the modpack needed to join our server.</p>
-      <a href="papajgang1.png" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
-        Download Modpack
+      <h2 class="text-2xl font-semibold mb-4">📦 Pobierz PrażmodPack</h2>
+      <p class="mb-4">Aby pobrać tą paczke wejdź w CurseForge App i w modpackach z minecraft wybierz "Import" i "Import Profile .zip".</p>
+      <a href="Prażmodpack.zip" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
+        PrażmodPack
       </a>
     </section>
 
     <!-- Discord Join -->
     <section class="p-10 text-center">
-      <h2 class="text-2xl font-semibold mb-4">💬 Join the Community</h2>
-      <p class="mb-4">Chat, share builds, and get updates on our Discord server.</p>
+      <h2 class="text-2xl font-semibold mb-4">💬 Dyskord</h2>
+      <p class="mb-4">Wbijaj na serwer dyscord Prażma.</p>
       <a href="https://discord.gg/xUusTA9s9N" target="_blank" class="bg-green-600 hover:bg-green-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
-        Join Discord
+        Dyskord
       </a>
     </section>
 
     <!-- Footer -->
     <footer class="bg-gray-800 bg-opacity-90 text-center py-6 text-sm text-gray-400">
-      © 2025 Your Minecraft Server. Not affiliated with Mojang or Microsoft.
+      © 2025 PrażmoCraft. Not affiliated with Mojang, Microsoft or Dys.
     </footer>
 
   </div>
