--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="p-10 text-center">
       <h2 class="text-2xl font-semibold mb-4">📦 Pobierz PrażmodPack</h2>
       <p class="mb-4">Aby pobrać tą paczke wejdź w CurseForge App i w modpackach z minecraft wybierz "Import" i "Import Profile .zip".</p>
-      <a href="Prażmodpack.zip" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
+      <a href="Prazmodpack.zip" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
         PrażmodPack
       </a>
     </section>
