--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 bg-opacity-90 text-center py-6 text-sm text-gray-400">
       © 2025 PrażmoCraft. Not affiliated with Mojang, Microsoft or Dys.
+      Strona zrobiona przez @Xevio.
     </footer>
 
   </div>
