--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Download Section -->
     <section class="p-10 text-center">
       <h2 class="text-2xl font-semibold mb-4">📦 Pobierz PrażmodPack</h2>
-      <p class="mb-4">Aby pobrać tą paczke wejdź w CurseForge App i w modpackach z minecraft wybierz "Import" i "Import Profile .zip".</p>
+      <p class="mb-4">Mody wystarczy wkleić do folderu mods".</p>
       <a href="https://www.mediafire.com/file/1151krymobvkzg7/Pra%25C5%25BCmodPack.zip/file" download class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-3 rounded-lg text-lg shadow-md transition">
         PrażmodPack
       </a>
